applicant pages header displayed as thymeleaf fragment

--- a/src/main/resources/templates/applicant-applications.html
+++ b/src/main/resources/templates/applicant-applications.html
@@ -7,43 +7,50 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div class="row" style="margin-top: 40px"></div>
-<div class="row" style="margin-bottom: 40px">
-    <h3 style="text-align: center">
-        Liczba złożonych wniosków: <span th:text="${formList.size()}">liczba</span>
-    </h3>
-</div>
-<div class="table-container">
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-            <table class="table table-striped">
-                <tr>
-                    <th>Lp</th>
-                    <th>Typ zgłoszenia</th>
-                    <th>Data zgłoszenia</th>
-                    <th>Status</th>
-                    <th>Akcja (wyświetl/edytuj/usuń)</th>
-                </tr>
-                <tr th:each="form, status: ${formList}">
-                    <td th:text="${status.count}">1</td>
-                    <td th:text="${form.getFormType().toString()}">rodzaj formularza</td>
-                    <td th:text="${#temporals.format(form.getApplicationDateTime(), 'dd-MMM-yyy HH:mm')}">12.12.2021T08:30</td>
-                    <td th:text="${form.getFormStatus().toString()}">zaakceptowany</td>
-                    <td>zobacz/edytuj/usuń</td>
+<div class="container">
+    <div th:insert="fragments/applicant-fragments :: header">
 
-                </tr>
-            </table>
-        </div>
-        <div class="col-sm-2"></div>
     </div>
-</div>
-<b><h4>dodaj mozliwosc edytowania formularza tylko do momentu, zanim zajmie sie nim ktos z asm<br>
-    Sprawdz formStatus. FILED - mozna edytowac, PROCESSING - nie mozna</h4></b>
-<div class="row" style="margin-top: 40px">
-    <div class="col-sm-8"></div>
-    <div class="col-sm-2">
-        <a href="/applicant" class="btn btn-secondary" style="width: 100%">Powrót</a>
+    <div class="row" style="margin-top: 40px"></div>
+    <div class="row" style="margin-bottom: 40px">
+        <h3 style="text-align: center">
+            Liczba złożonych wniosków: <span th:text="${formList.size()}">liczba</span>
+        </h3>
+    </div>
+    <div class="table-container">
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <table class="table table-striped">
+                    <tr>
+                        <th>Lp</th>
+                        <th>Typ zgłoszenia</th>
+                        <th>Data zgłoszenia</th>
+                        <th>Status</th>
+                        <th>Akcja (wyświetl/edytuj/usuń)</th>
+                    </tr>
+                    <tr th:each="form, status: ${formList}">
+                        <td th:text="${status.count}">1</td>
+                        <td th:text="${form.getFormType().toString()}">rodzaj formularza</td>
+                        <td th:text="${#temporals.format(form.getApplicationDateTime(), 'dd-MMM-yyy HH:mm')}">
+                            12.12.2021T08:30
+                        </td>
+                        <td th:text="${form.getFormStatus().toString()}">zaakceptowany</td>
+                        <td>zobacz/edytuj/usuń</td>
+
+                    </tr>
+                </table>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+    </div>
+    <b><h4>dodaj mozliwosc edytowania formularza tylko do momentu, zanim zajmie sie nim ktos z asm<br>
+        Sprawdz formStatus. FILED - mozna edytowac, PROCESSING - nie mozna</h4></b>
+    <div class="row" style="margin-top: 40px">
+        <div class="col-sm-8"></div>
+        <div class="col-sm-2">
+            <a href="/applicant" class="btn btn-secondary" style="width: 100%">Powrót</a>
+        </div>
     </div>
 </div>
 </body>
