--- a/src/main/resources/templates/applicant-home.html
+++ b/src/main/resources/templates/applicant-home.html
@@ -11,19 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="row" style="height: 30px"></div>
-    <div class="row">
-        <div class="col-sm-6">
-            <img th:src="@{/images/pansa-logo.jpg}" height="70px">
-        </div>
-        <div class="col-sm-2">
-            <a href="/">Strona główna</a>
-        </div>
-        <div class="col-sm-4">
-            <a th:if="${authentication.isAuthenticated}" th:text="'Wyloguj (' + ${authentication.getName} + ')'" th:href="@{/logout}">wyloguj</a>
-        </div>
-    </div>
-    <div class="row" style="height: 30px"></div>
+    <div th:insert="/fragments/applicant-fragments::header"></div>
 
     <div class="row">
         <div class="col-sm-11" style="text-align: center"><h3>Witaj w managerze wniosków, co chcesz zrobić?</h3></div>
@@ -54,7 +42,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Pokaz laserów</h5>
                         <p class="card-text">Jeszcze niedostępne!</p>
-                        <a href="/applicant/lasers-form" class="btn btn-primary btn-secondary btn-lg disabled">Złóż wniosek</a>
+                        <a href="/applicant/lasers-form" class="btn btn-primary btn-secondary btn-lg disabled">Złóż
+                            wniosek</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +58,7 @@
                          alt="wniosek - lampiony" height="200px">
                     <div class="card-body">
                         <h5 class="card-title">Lampiony, balony</h5>
-<!--                        <p class="card-text">Jeszcze niedostępne!</p>-->
+                        <!--                        <p class="card-text">Jeszcze niedostępne!</p>-->
                         <a href="/applicant/recreation-baloon-form" class="btn btn-primary btn-lg" role="button"
                            aria-disabled="true">Złóż wniosek</a>
                     </div>
@@ -83,7 +72,8 @@
         <div class="col-sm-1"></div>
 
         <div class="col-sm-3">
-            <a href="/applicant/applications" th:text="|Wyświetl moje wnioski (${applicationsCount})|" class="btn btn-primary" style="width: 100%">Wyświetl moje wnioski</a>
+            <a href="/applicant/applications" th:text="|Wyświetl moje wnioski (${applicationsCount})|"
+               class="btn btn-primary" style="width: 100%">Wyświetl moje wnioski</a>
         </div>
 
         <div class="col-sm-3">
@@ -94,15 +84,21 @@
             <a href="/user/email-password" class="btn btn-primary" style="width: 100%">Zmień email/hasło</a>
         </div>
 
-        </div>
-        <div class="col-sm-2"></div>
     </div>
+    <div class="col-sm-2"></div>
+</div>
 </div>
 
 <!--required by some bootstrap goodness-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
