--- a/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
+++ b/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
@@ -38,6 +38,8 @@
 
     <form method="post" th:action="@{/applicant/probing-form-save}" th:object="${form}">
 
+        <input type="hidden" th:field="*{id}">
+
         <div class="row mb-3">
             <label for="name" class="col-sm-2 col-form-label col-form-label-sm col-form-label col-form-label-sm-sm">Imię i nazwisko</label>
             <div class="col-sm-6">
