added form display in read-only mode

--- a/src/main/resources/templates/applicant/applications.html
+++ b/src/main/resources/templates/applicant/applications.html
@@ -37,7 +37,7 @@
                         </td>
                         <td th:text="${form.getFormStatus().toString()}">zaakceptowany</td>
                         <td>
-                            wyświetl/
+                            <a th:href="|/applicant/applications/display/${form.id}|">wyświetl</a>
                             <a th:href="|/applicant/applications/edit/${form.id}|">edytuj</a>
                             <a th:href="|/applicant/applications/delete-form/${form.id}|">usuń</a>
                         </td>
