added task supporting classes

--- a/src/main/resources/templates/employee/home.html
+++ b/src/main/resources/templates/employee/home.html
@@ -17,13 +17,14 @@
     <div class="table-container">
         <div class="row">
             <div class="col-sm-2"></div>
-            <div class="col-sm-8">
+<!--            <div class="col-sm-8">-->
                 <table class="table table-striped">
                     <tr>
                         <th>Lp</th>
                         <th>Typ zgłoszenia</th>
                         <th>Wnioskodawca</th>
                         <th>Data zgłoszenia</th>
+                        <th>Data wydarzenia</th>
                         <th>Status</th>
                         <th>Akcja (rozpatrz/usuń)</th>
                     </tr>
@@ -44,7 +45,7 @@
 
                     </tr>
                 </table>
-            </div>
+<!--            </div>-->
             <div class="col-sm-2"></div>
         </div>
     </div>
